examples/bad/already-in-scope/distinct-fun-var-names.oo
int ff = 5;

int ff(int i) {
    return 5;
}

